changed journal splits to explanatory/predictive and added R2adjusted into the discussion

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -108,7 +108,7 @@ Recent studies have sought to enhance emotion prediction by identifying more rel
 
 <!--This paragraph now is somewhat inconsistent with the analyses we actually perform motivating the journal/feature N/model discussion-->
 
-Our aim is to evaluate the predictive accuracy of two types emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent studies to identify the overall success rate in MER tasks and the key factors such as modelling techniques, the number of features, or the inferential goal (explanation vs prediction) that might contribute to the prediction accuracy of the models. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years, focusing on subgroup analyses capturing these differences (model type, feature N, journal type). Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model [@yang2018review].\
+Our aim is to evaluate the predictive accuracy of two types emotional expression in music: (a) models that predict track-specific coordinates in affective circumplex space (valence and arousal), and (b) models that classify discrete emotion categories. We focus on recent studies to identify the overall success rate in MER tasks and the key factors such as modelling techniques, the number of features, or the inferential goal (explanation vs prediction) that might contribute to the prediction accuracy of the models. To achieve this, we conduct a meta-analysis of journal articles published in the past 10 years, focusing on subgroup analyses capturing these differences (model type, feature N, and predictive vs explanatory modelling). Based on existing literature, we hypothesize that arousal will be predicted with higher accuracy than valence, as valence tends to be more context-dependent and challenging to model [@yang2018review].\
 <!-- yang et al. attribute this to fewer salient features, and individual differences, which I think is consistent with these descriptions -->\
 In terms of the modelling techniques and the number of features, a reasonable hypothesis is that advanced techniques (e.g., neural networks) and larger amount of features will lead to higher prediction rates than conventional techniques (e.g., logistic regression or linear regression) and smaller feature sets. However, this relationship might not be as straightforward as this due to the demands complex models place on dataset size [@alwosheel2018; @sun2017revisiting].
 
@@ -158,7 +158,7 @@ TABLE 1: Summary of data
 | Feature N | Min=3, Md=653, Max=14460 | Min=6, Md=98, Max=8904 | NA |
 | Stimulus N | Min=20, Md=324, Max=2486 | Min=124, Md=300, Max=5192 | NA |
 
-Although the total number of studies meeting the criteria described in the previous section is modest (34 in total), they encompass a large array of models (290 in total) with a relatively even distribution among the three most popular techniques: Neural Nets (85 models in total), SVMs (88), and Linear Methods (81). Tree-based models are less frequently used (30 in total), and there is a small number (6) of other model techniques such as kernel smoothing or K-nearest neighbors (KNN) techniques used in the models. However, these techniques will not be visible in the breakdown of the results as these models were not among the strongest models per study (see reporting principles in the results). The number of features and stimuli within these studies varies significantly, ranging from as few as three features [@battcock2021in] to a maximum of almost 14,500 features [@zhang2023mo]. The median number of features differs between regression (653) and classification (98) studies, primarily reflecting the nature of the datasets used in each approach. The number of stimuli is typically around 300-400 (with a median of 324 for regression and 300 for classification), though there is substantial variation, with the extremes from 20 stimuli in @beveridge2018po to 5192 stimuli in @alvarez2023ri. There are also additional dimensions to consider, such as the type of cross-validation used, the music genres analyzed (whether a single genre, multiple genres, or a mix), the type of journal in which the studies were published, and the extraction tool used to extract features. However, these variables do not lend themselves to a simple summary, so we will revisit them during the interpretation and discussion stages.
+Although the total number of studies meeting the criteria described in the previous section is modest (34 in total), they encompass a large array of models (290 in total) with a relatively even distribution among the three most popular techniques: Neural Nets (85 models in total), SVMs (88), and Linear Methods (81). Tree-based models are less frequently used (30 in total), and there is a small number (6) of other model techniques such as kernel smoothing or K-nearest neighbors (KNN) techniques used in the models. However, these techniques will not be visible in the breakdown of the results as these models were not among the strongest models per study (see reporting principles in the results). The number of features and stimuli within these studies varies significantly, ranging from as few as three features [@battcock2021in] to a maximum of almost 14,500 features [@zhang2023mo]. The median number of features differs between regression (653) and classification (98) studies, primarily reflecting the nature of the datasets used in each approach. The number of stimuli is typically around 300-400 (with a median of 324 for regression and 300 for classification), though there is substantial variation, with the extremes from 20 stimuli in @beveridge2018po to 5192 stimuli in @alvarez2023ri. There are also additional dimensions to consider, such as the type of cross-validation used, the music genres analyzed (whether a single genre, multiple genres, or a mix), the type of modelling (predictive or explanatory) framework, and the extraction tool used to extract features. However, these variables do not lend themselves to a simple summary, so we will revisit them during the interpretation and discussion stages.
 
 We first report regression studies that predict valence and arousal.
 
@@ -225,7 +225,7 @@ We also ran the sub-grouping analyses across stimulus genres (single vs mixed), 
 
 <!-- see this to ignore I\^2 and rely on prediction interval: https://onlinelibrary.wiley.com/doi/full/10.1002/jrsm.1678 -->
 
-These comparisons of sub-groupings may also be influenced by other factors, such as the aim of the study (i.e. whether it focused on prediction or explanation). To address this, we used the type of journal in which each study was published as a proxy indicator, classifying journals as either psychology or engineering. Of the 22 regression studies, 13 were published in engineering journals, yielding an average correlation of *r* = 0.656 (9% CI: 0.505–0.769). Studies published in psychology journals (9) showed a similar overall correlation of *r* = 0.688 (95% CI: 0.468–0.827). No significant difference in model accuracy was observed between the two types of study aims, *Q*(1) = 0.10, *p* = 0.748. More broadly, while the sub-groupings based on modelling techniques result in an uneven distribution of studies and observations, the two main sub-groupings presented in Table 2 highlight valuable differences in model performance across the studies. <!-- numbers in the text updated up to here, CA 20/2/2025 -->
+These comparisons of sub-groupings may also be influenced by other factors, such as whether the study utilised predictive or explanatory modelling framework. To address this, we used the type of journal in which each study was published as a proxy indicator for predictive or explanatory modelling, where we classified studies published in psychology journals as explanatory and those published in engineering journals as predictive. Of the 22 regression studies, 13 were classified into predictive frameworks, yielding an average correlation of *r* = 0.656 (9% CI: 0.505–0.769). Studies with explanatory frameworks (9 in total) showed a similar overall correlation of *r* = 0.688 (95% CI: 0.468–0.827). No significant difference in model accuracy was observed between the two types of frameworks, *Q*(1) = 0.10, *p* = 0.748. More broadly, while the sub-groupings based on modelling techniques result in an uneven distribution of studies and observations, the two main sub-groupings presented in Table 2 highlight valuable differences in model performance across the studies. <!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 <!-- DISCUSS: we don't report journal type of explain/predict differences, although we do some of these in arousal, TE 19/3/2025: Now added! -->
 
@@ -269,7 +269,7 @@ Figure 3 presents a forest plot of the random-effects model of the best-performi
 
 #### Reporting splits
 
-The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (*Q*(2) = 5.20, *p* = .074) despite the differing means (*r* = 0.885 for studies with less than 30 features, *r* = 0.735 for 30 to 300 features, and *r* = 0.804 for studies utilising over 300 features). The differences in the techniques, however, show statistically significant variance between subgroups (*Q*(3) = 10.83, *p* = .0127). The Neural Nets (NN) achieve poor prediction of arousal (*r* = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. When other sub-groupings were explored, such as the type of journal (Engineering with 13 studies vs Psychology with 9 studies), no significant differences were observed (*Q*(1) = 0.94, *p* = .333).
+The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (*Q*(2) = 5.20, *p* = .074) despite the differing means (*r* = 0.885 for studies with less than 30 features, *r* = 0.735 for 30 to 300 features, and *r* = 0.804 for studies utilising over 300 features). The differences in the techniques, however, show statistically significant variance between subgroups (*Q*(3) = 10.83, *p* = .0127). The Neural Nets (NN) achieve poor prediction of arousal (*r* = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. When other sub-groupings were explored, such as the type of framework utilised (predictive or explanatory), no significant differences were observed (*Q*(1) = 0.94, *p* = .333).
 
 {{< include _figure3.qmd >}}
 
@@ -308,7 +308,7 @@ Accounting for outliers among the classifications results removes 6 studies, aff
 
 ### Reporting splits
 
-The number of features (as classified into under 30, between 30 and 300, and above 300 features; see Table 3 for actual ranges) analyzed does not significantly impact results (*Q*(2) = 3.91, *p* = 0.1419), despite $MCC$s showing average differences according to the number of features (\< 30 F: $MCC$ = 0.9293; 30-300 F: $MCC$ = 0.8458; \>300 F: $MCC$ = 0.7754). Similarly, the class of model did not differ significantly (*Q*(3) = 4.22, *p* = 0.239) despite neural networks attaining highest average performance ($MCC$ = 0.9307), followed by SVMs ($MCC$ = 0.870) and tree-based methods ($MCC$ = 0.854), then linear methods ($MCC$ = 0.728). Finally, neither single- vs. multigenre studies (*Q*(1) = 0.12, *p* = 0.7324), nor binary vs. multi-class models (*Q*(1) = 0.03, *p* = 0.8694) differed significantly. All classification studies were published in engineering journals.
+The number of features (as classified into under 30, between 30 and 300, and above 300 features; see Table 3 for actual ranges) analyzed does not significantly impact results (*Q*(2) = 3.91, *p* = 0.1419), despite $MCC$s showing average differences according to the number of features (\< 30 F: $MCC$ = 0.9293; 30-300 F: $MCC$ = 0.8458; \>300 F: $MCC$ = 0.7754). Similarly, the class of model did not differ significantly (*Q*(3) = 4.22, *p* = 0.239) despite neural networks attaining highest average performance ($MCC$ = 0.9307), followed by SVMs ($MCC$ = 0.870) and tree-based methods ($MCC$ = 0.854), then linear methods ($MCC$ = 0.728). Finally, neither single- vs. multigenre studies (*Q*(1) = 0.12, *p* = 0.7324), nor binary vs. multi-class models (*Q*(1) = 0.03, *p* = 0.8694) differed significantly. All classification studies were published in engineering journals and thus represent predictive framework in our earlier typology.
 
 ### Model success across concepts, model types and feature counts
 
@@ -349,7 +349,7 @@ The results of the meta-analysis offer several important insights. First, compar
 TE: Interesting, it is a potential weakness and it would make our promotion of MCC more valuable when we could demonstrate how these two are linked, but perhaps to limit the workload, we could try identify a small subset to which to apply to this idea. -->
 ```
 
-Second, there is no single modelling technique that seems to arise on top, although linear models and random forests perform best in regression studies, and neural networks and support vector machines excel in classification tasks. We note that the model accuracy is surprisingly little affected by the number of features or the dataset size—likely the result of cross-validation techniques used to avoid overfitting—but the heterogeneity of the materials used in different studies may also mask substantial differences. For instance, the smaller datasets tend to use linear models and deliver higher model accuracy than larger datasets and those with a large number of features. We surmise that this might relate to disciplinary differences. For example, the smaller datasets often come from music psychology studies, which put a premium on data quality (quality control of the ground-truth data and features) rather than on dataset size and model techniques. This argument is largely consistent with the analysis of the studies divided across journal types (psychology vs. engineering), even though the pattern is not well-defined.
+Second, there is no single modelling technique that seems to arise on top, although linear models and random forests perform best in regression studies, and neural networks and support vector machines excel in classification tasks. We note that the model accuracy is surprisingly little affected by the number of features or the dataset size—likely the result of cross-validation techniques used to avoid overfitting—but the heterogeneity of the materials used in different studies may also mask substantial differences. For instance, the smaller datasets tend to use linear models and deliver higher model accuracy than larger datasets and those with a large number of features. We surmise that this might relate to disciplinary differences. For example, the smaller datasets often come from music psychology studies, which put a premium on data quality (quality control of the ground-truth data and features) rather than on dataset size and model techniques. This argument is largely consistent with the analysis of the studies divided across predictive and explanatory modelling frameworks (which we determined based on journals representing psychology or engineering discipline), even though the pattern is not well-defined.
 
 <!-- minor improvements to the ending of the paragraph above -->
 
@@ -371,9 +371,9 @@ Broadly speaking, the present study revealed an uncomfortably large variation in
 
 <!-- ### Reporting and transparency -->
 
-Future reports should contain viable information about the data, models, and success metrics. The modelling process should include a description of cross-validation, feature extraction technique, feature reduction (if used), and actual accuracy measures. We would recommend future studies to use *Matthews correlation coefficient* ($MCC$) for classification studies, as currently there are numerous metrics (*F~1~*, precision, recall, balanced accuracy, etc.), which do not operate in the same range. The situation for regression studies tends to be less volatile, but model accuracy may be reported with error measures (Mean Squared Error, Root Mean Squared Error, or Mean Absolute Error, or $MSE$, $RMSE$, $MAE$), which cannot be converted to relative measure such as $R^2$ without knowing the variance of the data. Again, we would recommend utilising $R^2$ due it being a relative measure and scale invarant to allow comparison across models, datasets, and studies.
+Future reports should contain viable information about the data, models, and success metrics. The modelling process should include a description of cross-validation, feature extraction technique, feature reduction (if used), and actual accuracy measures. We would recommend future studies to use *Matthews correlation coefficient* ($MCC$) for classification studies, as currently there are numerous metrics (*F~1~*, precision, recall, balanced accuracy, etc.), which do not operate in the same range. The situation for regression studies tends to be less volatile, but model accuracy may be reported with error measures (Mean Squared Error, Root Mean Squared Error, or Mean Absolute Error, or $MSE$, $RMSE$, $MAE$), which cannot be converted to relative measure such as $R^2$ without knowing the variance of the data. Again, we would recommend utilising $R^2$ due it being a relative measure and scale invarant to allow comparison across models, datasets, and studies. There is potential confusion in using the $R^2$ measure since some studies report $R^2_{\text{adj}}$, which is a less biased estimate of the model's explanatory power as it incorporates the number of predictors as a penalty. However, since there are other measures that calculate penalties for complex models (like AIC or BIC), and the difference between the two measures is small in large datasets, we nevertheless recommend $R^2$ as the most transparent accuracy measure for regression studies.
 
-<!-- added a recommendation for regression study outputs as well to para above. We could add a mention about R2 adjusted to penalise complex models, but there are other ways to punish for model complexity as well. -->
+<!-- added a recommendation for regression study outputs as well to para above. We could add a mention about R2 adjusted to penalise complex models, but there are other ways to punish for model complexity as well. This has now been added to the para above -->
 
 It would be also highly beneficial to share models and features transparently. If a study relies on published datasets, as most do, sharing the actual model (as code/notebooks) and features would allow for a more direct comparison of model techniques for the same dataset. Also, not all datasets are shared [@akiki2021; @santana2020; @hizlisoy2021mu; @zhang2017fe]. Standardizing reporting of datasets to include subsections explaining detailed information about stimuli (including genre, duration, sampling rate, and encoding format), features (types, extraction/analysis software, quantity of features, transformations, reduction methods), and models (types, tuning parameters, cross-validation) will enable more accurate comparisons between studies. The reporting in @grekow2018au serves as a useful example by providing enough detail in these areas to facilitate reproducibility. Although copyright restrictions may limit the sharing of some datasets, features and examples should be made available through reliable external repositories (e.g., [Zenodo](https://zenodo.org/), [Open Science Framework](https://osf.io/), or [Kaggle datasets](https://osf.io/)).
 
