--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -4,7 +4,44 @@
 %% Created for Tuomas Eerola at 2025-04-02 13:11:59 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
+
+@Article{deng2015em,
+  AUTHOR = {Deng, James J. and Leung, Clement H. C. and Milani, Alfredo and Chen, Li},
+  JOURNAL = {ACM TRANSACTIONS ON INTERACTIVE INTELLIGENT SYSTEMS},
+  MONTH = {MAR},
+  NUMBER = {1},
+  TITLE = {Emotional States Associated with Music: Classification, Prediction of Changes, and Consideration in Recommendation},
+  VOLUME = {5},
+  YEAR = {2015},
+  DOI = {10.1145/2723575},
+  BDSK = {https://doi.org/10.1145/2723575},
+  ISSN = {2160-6455},
+  EISSN = {2160-6463},
+  ORCID = {Chen, Li/0000-0002-5842-838X MILANI, Alfredo/0000-0003-4534-1805}
+}
+
+@Article{zhang2019us,
+  AUTHOR = {Zhang, Le-kai and Sun, Shou-qian and Xing, Bai-xi and Luo, Rui-ming and Zhang, Ke-jun},
+  JOURNAL = {FRONTIERS OF INFORMATION TECHNOLOGY \& ELECTRONIC ENGINEERING},
+  MONTH = {JUL},
+  NUMBER = {7},
+  PAGES = {964-974},
+  TITLE = {Using psychophysiological measures to recognize personal music emotional experience},
+  VOLUME = {20},
+  YEAR = {2019},
+  DOI = {10.1631/FITEE.1800101}}
+
+@article{dufour2021us,
+  author = {Dufour, Isabelle and Tzanetakis, George},
+  journal = {IEEE Transactions on Affective Computing},
+  MONTH = {JUL-SEP},
+  NUMBER = {3},
+  PAGES = {666--681},
+  TITLE = {Using Circular Models to Improve Music Emotion Recognition},
+  VOLUME = {12},
+  YEAR = {2021},
+  DOI = {10.1109/TAFFC.2018.2885744}}
 
 @article{battcock2019ac,
   title={Acoustically expressing affect},
